<resources>
    <string name="app_name">Calculator</string>
    <string name="calcuate">CALCUATE</string>
    <string name="result">RESULT</string>
    <string name="u2022">•</string>
    <string name="u2212">−</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="u00d7">×</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="u00f7">÷</string>
    <string name="percent">%</string>
    <string name="_1">1</string>
    <string name="c">C</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="undo">Undo</string>
    <string name="equalto">=</string>
    <string name="bracket">()</string>
    <string name="_0">0</string>
    <string name="add">+</string>
</resources>