<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_row="0"
            android:layout_column="0"
            android:background="@color/white"
            android:elevation="20sp"
            android:gravity="center"
            android:text="@string/c"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <ImageButton
            style="?android:attr/borderlessButtonStyle"
            android:src="@drawable/backgroun_img_btn"
            android:id="@+id/buttonUndo"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_row="0"
            android:layout_column="1"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:background="@null"
            android:stateListAnimator="@null"
            />

        <Button
            android:id="@+id/buttonPercent"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_row="0"
            android:layout_column="2"
            android:background="@color/white"

            android:elevation="20sp"
            android:gravity="center"
            android:text="@string/percent"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDiv"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_row="0"
            android:layout_column="3"
            android:background="@color/white"
            android:elevation="20sp"
            android:gravity="center"
            android:text="@string/u00f7"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button7"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_row="1"
            android:layout_column="0"
            android:background="@color/white"
            android:elevation="20sp"
            android:gravity="center"
            android:text="@string/_7"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button8"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_row="1"
            android:layout_column="1"
            android:background="@color/white"
            android:elevation="20sp"
            android:gravity="center"
            android:text="@string/_8"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button9"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_row="1"
            android:layout_column="2"
            android:background="@color/white"
            android:elevation="20sp"
            android:gravity="center"
            android:text="@string/_9"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonMul"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_row="1"
            android:layout_column="3"
            android:background="@color/white"
            android:elevation="20sp"
            android:gravity="center"
            android:text="@string/u00d7"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button4"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_row="2"
            android:layout_column="0"
            android:background="@color/white"
            android:elevation="20sp"
            android:gravity="center"
            android:text="@string/_4"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button5"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_row="2"
            android:layout_column="1"
            android:background="@color/white"
            android:elevation="20sp"
            android:gravity="center"
            android:text="@string/_5"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button6"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_row="2"
            android:layout_column="2"
            android:background="@color/white"
            android:elevation="20sp"
            android:gravity="center"
            android:text="@string/_6"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonSub"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_row="2"
            android:layout_column="3"
            android:background="@color/white"
            android:elevation="20sp"
            android:gravity="center"
            android:text="@string/u2212"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button1"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_row="3"
            android:layout_column="0"
            android:background="@color/white"
            android:elevation="20sp"
            android:gravity="center"
            android:text="@string/_1"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_row="3"
            android:layout_column="1"
            android:background="@color/white"
            android:elevation="20sp"
            android:gravity="center"
            android:text="@string/_2"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_row="3"
            android:layout_column="2"
            android:background="@color/white"
            android:elevation="20sp"
            android:gravity="center"
            android:text="@string/_3"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_row="3"
            android:layout_column="3"
            android:background="@color/white"
            android:elevation="20sp"
            android:gravity="center"
            android:text="@string/add"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button0"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_row="4"
            android:layout_column="0"
            android:background="@color/white"
            android:elevation="20sp"
            android:gravity="center"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_row="4"
            android:layout_column="1"
            android:background="@color/white"
            android:elevation="20sp"
            android:gravity="center"
            android:text="@string/u2022"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonBrac"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_row="4"
            android:layout_column="2"
            android:background="@color/white"
            android:elevation="20sp"
            android:gravity="center"
            android:text="@string/bracket"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonEql"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_row="4"
            android:layout_column="3"
            android:background="@color/white"
            android:elevation="20sp"
            android:gravity="center"
            android:text="@string/equalto"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />


    </GridLayout>


</LinearLayout>